# chess_imac_cpp

./: .clang-format  CMakeLists.txt  main_template.cpp.txt  temp_delbor_save
CMakeUtils/: files_and_folders.cmake
assets/models/creeper/: creeper.mtl
assets/models/king/: king.mtl
lib/glfeur/: CMakeLists.txt
lib/glfeur/src/: Camera.cpp  Camera.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
lib/glimac/: CMakeLists.txt
lib/glimac/src/: Program.cpp
pieces/: King.cpp  Pawn.hpp  Piece.hpp
shaders/: model.fs.glsl  skybox.vs.glsl
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  draw copy.cpp  draw.cpp  draw.hpp  main.cpp  move.cpp  move.hpp  utils.cpp  utils.hpp
src/3d/: Model3D.cpp  Model3D.hpp  Renderer3d.cpp  Renderer3d.hpp  test.hpp
src/3d/buffers/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/elements/: Board.cpp  Board.hpp  Color.hpp  Direction.hpp  Piece.cpp  Piece.hpp  Type.hpp  move.cpp  move.hpp
src/elements/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Racist.cpp  Racist.hpp  Rook.cpp  Rook.hpp
src/elements/pieces/bonus/: Elevator.cpp  Elevator.hpp  Fool.cpp  Fool.hpp  Kamikaze.cpp  Kamikaze.hpp  Racist.cpp  Racist.hpp  Well.cpp  Well.hpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/random/: random.cpp  random.hpp
